Fix/w2rc editor enhance (#600)
# w2rc editor enhance

Implemented:
- w2rc buffer views
- add a dump info unit test
- add reddb
- add files used by to asset browser
- add a statusbar loading bar

Fixed:
- fixed a bug where the cr2w editor child item arrow expander
- faster archive manager loading
- fixed some xaml binding failures
- fixed hidden properties in Propertygrids

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -1650,7 +1650,7 @@
                         Content="Show File Preview"
                         ToolTip="Toggle interactive file preview for improved performance "
                         Padding="6,0"
-                        IsChecked="{Binding canShowPrev, Mode=TwoWay}" />
+                        IsChecked="{Binding _settingsManager.ShowFilePreview, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 </syncfusion:RibbonBar>
                 
                 <!--  Utilities bar  -->
@@ -1832,7 +1832,7 @@
 
         <Border
             Width="42"
-            Height="49"
+            Height="51"
             Margin="13,-30,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
@@ -1860,7 +1860,7 @@
 
         <Border
             Width="42"
-            Height="49"
+            Height="51"
             Margin="13,-30,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="top"
