read compiled packages properly so that they don't throw errors

--- a/WolvenKit/Views/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Documents/DocumentView.xaml
@@ -37,7 +37,10 @@
                        ItemsSource="{Binding TabItemViewModels, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                        SelectedIndex="{Binding SelectedIndex}"
                        ContentTemplateSelector="{StaticResource RedDocumentTemplateSelector}"
-                       IsAnimationEnabled="True" ShowCloseButton="False" IsDraggable="False">
+                       IsAnimationEnabled="True"
+                       ShowCloseButton="False"
+                       IsDraggable="False"
+                       >
         </hc:TabControl>
         
        
