--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -11,17 +11,19 @@
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:syncfusionskin="clr-namespace:Syncfusion.SfSkinManager;assembly=Syncfusion.SfSkinManager.WPF"
     syncfusionskin:SfSkinManager.Theme="{syncfusionskin:SkinManagerExtension ThemeName=MaterialDark}"
-    IconAlignment="Right"
+    IconAlignment="Left"
     Icon="TaskBarIcon.ico"
     ShowIcon="False"
     ShowTitle="False"
-    TitleBarBackground="Transparent"
-    TitleTextAlignment="Right"
+    TitleTextAlignment="Left"
     ResizeMode="CanResizeWithGrip"
     UseNativeChrome="True"
     Title="WolvenKit"
     MinWidth="960"
     MinHeight="600"
+    AllowsTransparency="True"
+    TitleBarBackground="Transparent"
+    Panel.ZIndex="0"
     >
 
     <syncfusion:ChromelessWindow.Resources>
@@ -57,7 +59,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <shell:RibbonView Grid.Row="0" />
+        <shell:RibbonView Grid.Row="0" Margin="0,0,0,0" Panel.ZIndex="5"/>
 
         <shell:DockingAdapter
             x:Name="dockingAdapter"
@@ -67,11 +69,12 @@
 
         <shell:StatusBarView Grid.Row="2" />
 
-        <ScrollViewer Grid.Row="0" Grid.RowSpan="3"  HorizontalAlignment="Right" VerticalScrollBarVisibility="Hidden">
+        <ScrollViewer Grid.Row="0" Grid.RowSpan="3"  HorizontalAlignment="Right" VerticalScrollBarVisibility="Hidden" Panel.ZIndex="10">
             <StackPanel
                 Margin="0,35,10,10"
                 VerticalAlignment="Top"
                 hc:Growl.GrowlParent="True" />
         </ScrollViewer>
+
     </Grid>
 </syncfusion:ChromelessWindow>
