--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -2,7 +2,6 @@
     x:Class="WolvenKit.Views.Shell.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
     xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
@@ -14,7 +13,6 @@
     IconAlignment="Left"
     Icon="TaskBarIcon.ico"
     ShowIcon="False"
-    ShowTitle="False"
     TitleTextAlignment="Left"
     ResizeMode="CanResizeWithGrip"
     UseNativeChrome="True"
@@ -23,7 +21,6 @@
     MinHeight="600"
     AllowsTransparency="True"
     TitleBarBackground="Transparent"
-    Panel.ZIndex="0"
     >
 
     <syncfusion:ChromelessWindow.Resources>
@@ -47,7 +44,7 @@
         </DrawingBrush>
     </syncfusion:ChromelessWindow.Resources>
 
-    <Grid Margin="0,0,0,0" Background="{DynamicResource CloudDrawingBrushMain}">
+    <Grid Background="{DynamicResource CloudDrawingBrushMain}">
         <Grid.Resources>
             <converters:ActiveDocumentConverter x:Key="ActiveDocumentConverter" />
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
@@ -59,7 +56,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <shell:RibbonView Grid.Row="0" Margin="0,0,0,0" Panel.ZIndex="5"/>
+        <shell:RibbonView Margin="0,0,0,0" Grid.Row="0" Panel.ZIndex="5"/>
 
         <shell:DockingAdapter
             x:Name="dockingAdapter"
@@ -71,7 +68,7 @@
 
         <ScrollViewer Grid.Row="0" Grid.RowSpan="3"  HorizontalAlignment="Right" VerticalScrollBarVisibility="Hidden" Panel.ZIndex="10">
             <StackPanel
-                Margin="0,35,10,10"
+                Margin="0,0,10,10"
                 VerticalAlignment="Top"
                 hc:Growl.GrowlParent="True" />
         </ScrollViewer>
